# play-TRexRunner

./: .gitignore  01.ipynb  01.py  02.ipynb  03.ipynb  21_ starting fresh.ipynb  README.md  Untitled.py  main.py  pyproject.toml
.ipynb_checkpoints/: 02-checkpoint.ipynb  03-checkpoint.ipynb  22_ custom env-checkpoint.ipynb  v1-checkpoint.ipynb
chrome-dinosaur/: DinoEnv.py
files/gym-chrome-dino/gym_chrome_dino/game/: dino_game.py
